fix: align items in popular header

--- a/style.css
+++ b/style.css
@@ -321,10 +321,11 @@ img {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .popular__header h2 {
-  margin-top: 0;
+  margin: 0;
 }
 
 .popular__header i {
@@ -370,8 +371,8 @@ img {
 }
 
 .popular__card__thumbnail {
-  width: 40%;
-  height: 135px;
+  flex: 40%;
+  height: 20vh;
 }
 
 .popular__card__info {
@@ -386,7 +387,7 @@ img {
   -ms-flex-pack: justify;
   justify-content: space-between;
   padding: 10px 15px;
-  width: 60%;
+  flex: 60%;
 }
 
 .popular__card__info h4 {
@@ -543,6 +544,10 @@ footer {
   .popular {
     margin: 20px;
     border-radius: 25px;
+  }
+
+  .popular__card__thumbnail {
+    height: 16vh;
   }
 
   /* Lodging */
@@ -706,8 +711,12 @@ footer {
     width: 30%;
   }
 
+  .popular__card {
+    margin: 0;
+  }
+
   .popular__card__thumbnail {
-    height: 160px;
+    height: 14vh;
   }
 
   /* Activities */
